# xiulibc

./: .clang-format  CMakeLists.txt
include/collection/: common.hpp  diagnostics.hpp  generational_pool.hpp  pool.hpp  pool_iter.hpp
include/common/: file.hpp  logger.hpp  types.hpp
include/math/: algorithm.hpp  constants.hpp  matrix.hpp  rotor.hpp  transform.hpp  vector.hpp
include/time/: clock.hpp  timer.hpp
src/collection/: pool.cpp  pool_iter.cpp
src/common/: bytes.hpp  debug.h  file.hpp  logger.h  logger.hpp  types.h  types.hpp
src/common/time/: clock.cc  clock.h  timer.cc  timer.h
src/math/: algorithm.h  constants.h  matrix.cc  matrix.cpp  matrix.h  rotor.h  transform.cc  transform.cpp  transform.h  vector.cc  vector.cpp  vector.h
src/mem/: common.hpp  diagnostics.hpp  generational_pool.hpp  pool.cpp  pool.hpp  pool_iter.cpp  pool_iter.hpp
src/time/: clock.cpp  clock.hpp  timer.cpp  timer.hpp
